Loading screen + CSS/IMG/JS files

--- a/index.html
+++ b/index.html
@@ -11,12 +11,41 @@
   <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css' />
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,700" rel="stylesheet" type="text/css" />
 
-
-
-
-
-
-
+  <!-- Stylesheets -->
+  <link rel="stylesheet" href="css/bootstrap.min.css" />
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/flexslider.css" />
+  <link rel="stylesheet" href="css/animate.css">
+  <link rel="stylesheet" href="css/fontello/css/fontello.css" />
 
 </head>
+
+<body>
+  <div id="preloader">
+             <div class="content">
+             <h1>Gelli Barbara</h1>
+  	<h6>caricamento</h6>
+  	</div>
+  </div>
+
+  <div id="main-container">
+  <div id="navigation">
+        <div class="container">
+  	<div class="row">
+  		<div class="col-md-4 ">
+  			<div id="logo">
+  				<a href="index.html"><h1>Gelli Barbara </h1></a>
+  			</div>
+  		</div>
+
+
+
+
+
+
+
+
+
+
+
 </html>
