--- a/index.html
+++ b/index.html
@@ -42,19 +42,26 @@
 
                     <div class="col-md-8 ">
                         <ul id="menu">
-                            <li><a class="scroll" href="#main-container"><h6>Home</h6></a>
+                            <li>
+                              <a class="scroll" href="#main-container"><h6>Home</h6></a>
                             </li>
-                            <li><a class="scroll" href="#services"><h6>Servizi</h6></a>
+                            <li>
+                              <a class="scroll" href="#services"><h6>Servizi</h6></a>
                             </li>
-                            <li><a class="scroll" href="#work"><h6>Portfolio</h6></a>
+                            <li>
+                              <a class="scroll" href="#work"><h6>Portfolio</h6></a>
                             </li>
-                            <li><a class="scroll" href="#experience"><h6>Esperienze</h6></a>
+                            <li>
+                              <a class="scroll" href="#experience"><h6>Esperienze</h6></a>
                             </li>
-                            <li><a class="scroll" href="#education"><h6>Studi</h6></a>
+                            <li>
+                              <a class="scroll" href="#education"><h6>Studi</h6></a>
                             </li>
-                            <li><a class="scroll" href="#blog"><h6>Blog</h6></a>
+                            <li>
+                              <a class="scroll" href="#blog"><h6>Blog</h6></a>
                             </li>
-                            <li><a class="scroll" href="#contact"><h6>Contatti</h6></a>
+                            <li>
+                              <a class="scroll" href="#contact"><h6>Contatti</h6></a>
                             </li>
                         </ul>
                     </div>
@@ -77,7 +84,7 @@
                     <div class="home-shrink text-center pad-large">
                         <h1 class="display-h text-white">Gelli Barbara</h1>
                         <div class="hr dark"></div>
-                        <h2 class="roles text-white">Designer | Developer | Photographer</h2>
+                        <h2 class="roles text-white">Psicologa | Comportamentalista | Educatrice</h2>
                         </br>
                         </br>
                         </br>
@@ -102,7 +109,7 @@
                             Ella is a clean & simple one page theme for Creative Agency & Freelancers.</br>
                             <em>Showcase your work beautifully.</em>
                         </p>
-                        <a href="mailto:hello@Ella.com" class="btn wow fadeInUp" data-wow-delay="1s"><i class="icon-paper-plane"></i> <h6> CONTACT</h6></a>
+                        <a href="mailto:hello@Ella.com" class="btn wow fadeInUp" data-wow-delay="1s"><i class="icon-paper-plane"></i> <h6> Contatti</h6></a>
                         <a href="#" target="_blank" class="btn btn-inverse wow fadeInUp" data-wow-delay="2s"><i class="icon-download"></i><h6> Resume</h6></a>
                     </div>
                 </div>
@@ -116,7 +123,7 @@
                     <div class="col-md-12 ">
                         <div class="page-header wow fadeInDown">
                             <i class="icon-diamond"></i>
-                            <h4>SERVICES</h4>
+                            <h4>SERVIZI</h4>
                             <div class="hr "></div>
                         </div>
                     </div>
@@ -177,7 +184,7 @@
         </section>
 
 
-        <section id="work">
+        <!-- <section id="work">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
@@ -335,7 +342,7 @@
 
 
 
-                </div>
+                </div>-->
                 <!-- end of work-row-->
 
                 <div id="project-1" class="project">
@@ -722,7 +729,7 @@
                     <div class="col-md-12">
                         <div class="page-header wow fadeInDown">
                             <i class="icon-pagelines"></i>
-                            <h4 class="text-white">Experience</h4>
+                            <h4 class="text-white">Esperienze</h4>
                             <div class="hr dark"></div>
                         </div>
                     </div>
