--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         </div>
                         <h5>Psicoterapia individuale</h5>
                         <p>
-                            Omnium nominati prodesset pri no. Per dolor gloriatur persequeris. Omnium nominati prodesset pri no.
+                          Processo interpersonale, consapevole e pianificato, rivolto al singolo individuo. Tale processo ha l’obiettivo di ridurre i sintomi, le situazioni di sofferenza, i disturbi del comportamento, il disagio psicologico (Galimberti, 1992). La durata del trattamento dipende dalla problematica portata dal paziente.
                         </p>
                     </div>
 
@@ -152,7 +152,7 @@
                         </div>
                         <h5>Psicoterapia di coppia e famiglia</h5>
                         <p>
-                            Omnium nominati prodesset pri no. Per dolor gloriatur persequeris. Omnium nominati prodesset pri no.
+                          Processo interpersonale, consapevole e pianificato, che si propone di modificare gli schemi di interazione all'interno della coppia o della famiglia, in quanto percepiti come fonte di disagio. La psicoterapia (che si svolge attraverso colloqui), si propone di aiutare la coppia o la famiglia ad integrare il cambiamento per ricostruire l’equilibrio. La durata del trattamento dipende dalla problematica presentata.
                         </p>
                     </div>
 
@@ -167,9 +167,12 @@
                         </div>
                         <h5>Sostegno psicologico</h5>
                         <p>
-                            Omnium nominati prodesset pri no. Per dolor gloriatur persequeris. Omnium nominati prodesset pri no.
+                          Si propone di dare un supporto emotivo al paziente, aiutandolo nelle sue difficoltà esistenziali attraverso un intervento attivo del terapeuta che consiglia, guida e talvolta dirige (Galimberti, 1992). La durata del trattamento dipende dalla problematica portata dal paziente.
                         </p>
                     </div>
+
+                    <br>
+
 
                     <div class="row service-row">
 
@@ -183,7 +186,7 @@
                             </div>
                             <h5>Counseling</h5>
                             <p>
-                                Omnium nominati prodesset pri no. Per dolor gloriatur persequeris. Omnium nominati prodesset pri no.
+                              Consiste in un’azione di sostegno terapeutico nella decisione, allo scopo di creare le condizioni per un’autonomia decisionale, attraverso la considerazione di fattori coscienti. Scopo del counseling è quello di consentire all’individuo una visione realistica di sé e dell’ambiente sociale in cui si trova ad operare, con la riduzione al minimo della conflittualità dovuta a fattori soggettivi (Galimberti, 1992). La durata del trattamento è breve (4 – 6 sedute).
                             </p>
                         </div>
 
@@ -197,7 +200,7 @@
                             </div>
                             <h5>Psicoterapia didattica</h5>
                             <p>
-                                Omnium nominati prodesset pri no. Per dolor gloriatur persequeris. Omnium nominati prodesset pri no.
+                              Trattamento psicoterapeutico a cui si sottopongono coloro che vogliono svolgere la professione di psicoterapeuta (Galimberti, 1992). Per accedere a questo tipo di psicoterapia, è necessario aver conseguito la laurea quinquennale in psicologia (o in medicina) ed aver intrapreso un percorso di specializzazione quadriennale.
                             </p>
                         </div>
 
@@ -212,7 +215,7 @@
                             </div>
                             <h5>Supervisione</h5>
                             <p>
-                                Omnium nominati prodesset pri no. Per dolor gloriatur persequeris. Omnium nominati prodesset pri no.
+                               E' rivolta a psicoterapeuti in formazione. Essi rendicontano del proprio modo di condurre i trattamenti attraverso relazioni orali e/o scritte, e il supervisore controlla il lavoro del terapeuta in formazione, in particolare il suo controtransfert (Galimberti, 1992).
                             </p>
                         </div>
                       </div>
