Contact me, bug fix

--- a/index.html
+++ b/index.html
@@ -106,8 +106,7 @@
                             Ella is a clean & simple one page theme for Creative Agency & Freelancers.</br>
                             <em>Showcase your work beautifully.</em>
                         </p>
-                        <a href="mailto:gelli.barbara@libero.it" class="btn wow fadeInUp" data-wow-delay="1s"><i class="icon-paper-plane"></i> <h6> Contatti</h6></a>
-                        <a href="#" target="_blank" class="btn btn-inverse wow fadeInUp" data-wow-delay="2s"><i class="icon-download"></i><h6>Curriculum</h6></a>
+                        <a href="#contact" target="_blank" class="btn btn-inverse wow fadeInUp scroll" data-wow-delay="2s"><i class="icon-right-hand"></i><h6>Contattami</h6></a>
                     </div>
                 </div>
             </div>
