--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 
             <div class="row">
-                <div class="col-md-6 resume-pic">
+                <div class="col-md-12 resume-pic">
                 </div>
                 <div class="col-md-6">
                     <div class="home-shrink text-center pad-large">
@@ -106,7 +106,7 @@
                             Ella is a clean & simple one page theme for Creative Agency & Freelancers.</br>
                             <em>Showcase your work beautifully.</em>
                         </p>
-                        <a href="#contact" target="_blank" class="btn btn-inverse wow fadeInUp scroll" data-wow-delay="2s"><i class="icon-right-hand"></i><h6>Contattami</h6></a>
+                        <a href="#contact" target="_blank" class="btn btn-inverse wow fadeInUp scroll" data-wow-delay="1s"><i class="icon-right-hand"></i><h6>Contattami</h6></a>
                     </div>
                 </div>
             </div>
@@ -118,7 +118,7 @@
                 <div class="row">
                     <div class="col-md-12 ">
                         <div class="page-header wow fadeInDown">
-                            <i class="icon-diamond"></i>
+                            <i class="icon-info-circled"></i>
                             <h4>SERVIZI</h4>
                             <div class="hr "></div>
                         </div>
@@ -386,7 +386,7 @@
                 </div>-->
                 <!-- end of work-row-->
 
-                <div id="project-1" class="project">
+                <!--<div id="project-1" class="project">
                     <div class="project-wrapper">
                         <div class="row">
                             <div class="col-md-8 col-md-offset-2 project-details">
@@ -762,14 +762,14 @@
                 <!-- end project-->
 
             </div>
-        </section>
+        </section> -->
 
         <section id="experience">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
                         <div class="page-header wow fadeInDown">
-                            <i class="icon-pagelines"></i>
+                            <i class="icon-pageline"></i>
                             <h4 class="text-white">Esperienze</h4>
                             <div class="hr dark"></div>
                         </div>
@@ -832,8 +832,8 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="page-header wow fadeInDown">
-                            <i class="icon-photo"></i>
-                            <h4>EDUCATION</h4>
+                            <i class="icon-graduation-cap"></i>
+                            <h4>Studi</h4>
                             <div class="hr "></div>
                         </div>
                     </div>
