Horizontal flip of the img

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="row">
                     <div class="col-md-4 ">
                         <div id="logo">
-                            <a href="index.html"><h1>Gelli Barbara </h1></a>
+                            <a href="index.html"><h1>Gelli Barbara</h1></a>
                         </div>
                     </div>
 
@@ -75,7 +75,7 @@
 
 
             <div class="row">
-                <div class="col-md-12 resume-pic">
+                <div class="col-md-6 resume-pic img-responsive">
                 </div>
                 <div class="col-md-6">
                     <div class="home-shrink text-center pad-large">
@@ -90,7 +90,7 @@
                         </br>
                         </br>
                         </br>
-                        <a class="scroll" href="#about"><h6 class="text-white">Scorri in basso</h6></a>
+                        <a class="scroll" href="#about"><h6 class="text-white icon-angle-circled-down">Scorri in basso</h6></a>
                     </div>
                 </div>
             </div>
