general update of the HTML

--- a/index.html
+++ b/index.html
@@ -843,12 +843,14 @@
 
                 <div class="col-md-12">
                     <div class="col-md-4 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-delay="1s">
-                        <h3 class="period">2007 - 2010</h3>
+                        <h3 class="period">1999</h3>
                         <h4 class="organisation">Università di Padova</h4>
                     </div>
                     <div class="col-md-8 experience wow fadeInRight" data-wow-delay="1s">
-                        <h4>BSc(Hons.) Computer Science <span class="result"> (2:1)</span></h4>
-                        <p>Curabitur gravida pharetra augue sit amet tincidunt. Morbi a mi elementum, vehicula felis nec, commodo risus. Aliquam congue dignissim tempus. Nullam pharetra urna facilisis tellus vulputate, ac vehicula quam tempus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec sollicitudin, erat et consectetur tristique, eros nulla dapibus felis, nec convallis sapien odio vitae mi. Cras vel odio turpis. Cras dignissim adipiscing leo quis sagittis. Aenean vitae turpis lectus. Suspendisse porttitor vulputate scelerisque.</p>
+                        <h4>Laurea in Psicologia</h4>
+                        <p>
+                          Laurea in Psicologia con indirizzo “Clinico e di Comunità” conseguita presso l’Università di Padova nel 1999, discutendo la tesi: “Necrofilia e comportamenti necrofagici. Aspetti letterari, psicopatologici, forensi e antropologici”. Da Maggio a Novembre 2003 Master in “Psicologia Giuridica” presso il Centro Clinico di Psicologia Giuridica, Padova.
+                        </p>
                     </div>
                 </div>
 
@@ -885,8 +887,8 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="page-header wow fadeInDown">
-                            <i class="icon-comment"></i>
-                            <h4 class="text-white">Reference</h4>
+                            <i class="icon-note"></i>
+                            <h4 class="text-white">Pubblicazioni</h4>
                             <div class="hr dark"></div>
                         </div>
                     </div>
@@ -901,15 +903,15 @@
                             <div class="carousel-inner" role="listbox">
                                 <div class="item active">
                                     <p>
-                                        Flat is More.
+                                      All’interno del volume “Psicologia” di P. Crepet (Ed. Einaudi, 2006) sono coautrice dei seguenti capitoli: “Psicologia sociale”, “Psicologia clinica”, “Psicologia delle differenze individuali”, “Psicologia del lavoro”.
                                     </p>
-                                    <h6>Camilla & Enea, <span> Awwwards.com</span></h6>
+                                    <h6>“Psicologia” di P. Crepet (Ed. Einaudi, 2006)</h6>
                                 </div>
                                 <div class="item">
                                     <p>
-                                        You can have an art experience in front of a Rembrandt… or in front of a piece of graphic design.
+                                      Caracciolo S. Caravita G. Gelli B. Smecca F. Tomè S, Zaffagnini M and Molinari S: The 'Sa murai Spiri!': A Psychometric Study On Personality Of Extreme Sport Athletes. Comunicazione al 4 th International Meeting "Suicide: lnterplay of Genes and Environment", Gent. Belgium. 2-4 giugno 2005. (Abstract Book pag.42).
                                     </p>
-                                    <h6>STEFAN SAGMEISTER, <span> Awwwards.com</span></h6>
+                                    <h6>The 'Sa murai Spiri!' and "Suicide: lnterplay of Genes and Environment"</h6>
                                 </div>
                                 <div class="item">
                                     <p>
@@ -919,13 +921,6 @@
                                 </div>
                             </div>
 
-                            <!-- Controls -->
-                            <a class="left carousel-control" href="#testimonials-slider" role="button" data-slide="prev">
-                                <span class="icon-angle-left" aria-hidden="true"></span>
-                            </a>
-                            <a class="right carousel-control" href="#testimonials-slider" role="button" data-slide="next">
-                                <span class=" icon-angle-right" aria-hidden="true"></span>
-                            </a>
                         </div>
 
                     </div>
