--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
                             <li>
                               <a class="scroll" href="#education"><h6>Studi</h6></a>
                             </li>
-                            <li>
+                            <!-- <li>
                               <a class="scroll" href="#blog"><h6>Blog</h6></a>
-                            </li>
+                            </li>-->
                             <li>
                               <a class="scroll" href="#contact"><h6>Contatti</h6></a>
                             </li>
@@ -771,7 +771,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="page-header wow fadeInDown">
-                            <i class="icon-pageline"></i>
+                            <i class="icon-chart-line"></i>
                             <h4 class="text-white">Esperienze</h4>
                             <div class="hr dark"></div>
                         </div>
@@ -787,12 +787,14 @@
                             <div class="carousel-inner" role="listbox">
                                 <div class="item active">
                                     <div class="col-md-4 col-sm-12 col-xs-12">
-                                        <h3 class="text-white period">2013 - Present</h3>
-                                        <h4 class="text-white organisation">Creative Agency</h4>
+                                        <h3 class="text-white period">2007 - Present</h3>
+                                        <h4 class="text-white organisation">Professoressa ed educatrice</h4>
                                     </div>
                                     <div class="col-md-8 experience" data-wow-delay="1s">
                                         <h4>Senior Front-end Developer</h4>
-                                        <p>Curabitur gravida pharetra augue sit amet tincidunt. Morbi a mi elementum, vehicula felis nec, commodo risus. Aliquam congue dignissim tempus. Nullam pharetra urna facilisis tellus vulputate, ac vehicula quam tempus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec sollicitudin, erat et consectetur tristique, eros nulla dapibus felis, nec convallis sapien odio vitae mi. Cras vel odio turpis. Cras dignissim adipiscing leo quis sagittis. Aenean vitae turpis lectus. Suspendisse porttitor vulputate scelerisque.</p>
+                                        <p>
+                                          Professoressa a contratto  in qualità di cultore della materia per il corso “Psicologia del tempo libero e dello sport”, laurea in Scienze Motorie, facoltà di Medicina e Chirurgia. Operatore di Strada dell’Unità Mobile, in collaborazione con il Ser.T. di Ferrara, per un progetto di riduzione del danno e del contenimento del disagio. Educatore su disabili mentali presso il Comune di Ferrara (in collaborazione con A.C.L.I.), in un progetto di inserimento lavorativo.
+                                        </p>
                                     </div>
                                 </div>
                                 <div class="item">
@@ -849,30 +851,29 @@
                     <div class="col-md-8 experience wow fadeInRight" data-wow-delay="1s">
                         <h4>Laurea in Psicologia</h4>
                         <p>
-                          Laurea in Psicologia con indirizzo “Clinico e di Comunità” conseguita presso l’Università di Padova nel 1999, discutendo la tesi: “Necrofilia e comportamenti necrofagici. Aspetti letterari, psicopatologici, forensi e antropologici”. Da Maggio a Novembre 2003 Master in “Psicologia Giuridica” presso il Centro Clinico di Psicologia Giuridica, Padova.
-                        </p>
+                          Laurea in Psicologia con indirizzo “Clinico e di Comunità” conseguita presso l’Università di Padova nel 1999, discutendo la tesi: “Necrofilia e comportamenti necrofagici. Aspetti letterari, psicopatologici, forensi e antropologici”. Da Maggio a Novembre 2003 Master in “Psicologia Giuridica” presso il Centro Clinico di Psicologia Giuridica, Padova. Iscrizione all’Ordine degli Psicologi–Psicoterapeuti della Regione Emilia Romagna, con numero 3084/A.</p>
                     </div>
                 </div>
 
                 <div class="col-md-12">
                     <div class="col-md-4 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-delay="1s">
-                        <h3 class="period">2006 </h3>
-                        <h4 class="organisation">Oxford College</h4>
+                        <h3 class="period">2002 - 2006</h3>
+                        <h4 class="organisation">Roma</h4>
                     </div>
                     <div class="col-md-8 experience wow fadeInRight" data-wow-delay="1s">
-                        <h4>A-Levels<span class="result"> (3A)</span></h4>
-                        <p>Curabitur gravida pharetra augue sit amet tincidunt. Morbi a mi elementum, vehicula felis nec, commodo risus. Aliquam congue dignissim tempus. Nullam pharetra urna facilisis tellus vulputate, ac vehicula quam tempus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec sollicitudin, erat et consectetur tristique, eros nulla dapibus felis, nec convallis sapien odio vitae mi. Cras vel odio turpis. Cras dignissim adipiscing leo quis sagittis. Aenean vitae turpis lectus. Suspendisse porttitor vulputate scelerisque.</p>
+                        <h4>Corsi di Formazione</h4>
+                        <p>Corso di Formazione “Famiglia e nuove patologie emergenti” c/o Villa Eur-Parco dei Pini. Da Gennaio 2002 a Giugno 2003 Corso di Formazione in “Psicologia giuridica, psicopatologia e psicodiagnostica forense”, presso l’Associazione Italiana Psicologia Giuridica (A.I.P.G), Roma.</p>
                     </div>
                 </div>
 
                 <div class="col-md-12">
                     <div class="col-md-4 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-delay="1s">
-                        <h3 class="period">2004</h3>
-                        <h4 class="organisation">Oxford School</h4>
+                        <h3 class="period">2000 - 2015</h3>
+                        <h4 class="organisation">Ferrara</h4>
                     </div>
                     <div class="col-md-8 experience wow fadeInRight" data-wow-delay="1s">
-                        <h4>O-Levels<span class="result"> (4A)</span></h4>
-                        <p>Curabitur gravida pharetra augue sit amet tincidunt. Morbi a mi elementum, vehicula felis nec, commodo risus. Aliquam congue dignissim tempus. Nullam pharetra urna facilisis tellus vulputate, ac vehicula quam tempus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec sollicitudin, erat et consectetur tristique, eros nulla dapibus felis, nec convallis sapien odio vitae mi. Cras vel odio turpis. Cras dignissim adipiscing leo quis sagittis. Aenean vitae turpis lectus. Suspendisse porttitor vulputate scelerisque.</p>
+                        <h4>Corsi di Formazione e laboratori</h4>
+                        <p>Corso di Formazione “La valutazione della motivazione al cambiamento: il questionario MAC” c/o Azienda USL. Corso di Formazione “Tecniche di base del colloquio motivazionale”, c/o Ser.T. Corso di Formazione: “Empatia e negoziazione”, presso Centro Servizi di “Pratolungo”. Corso-workshop “L’orientamento come mediazione fra scuola e università” c/o Università degli studi di Ferrara. “Il salto nel buio - Laboratorio multimediale, workshop sul management della crisi suicidaria e la prevenzione del suicidio” c/o Dipartimento Salute Mentale. Corso di Formazione “Tutela sui minori figli di tossicodipendenti” c/o Sala Congressi San Girolamo dei Gesuati di Ferrara.</p>
                     </div>
                 </div>
 
@@ -915,10 +916,16 @@
                                 </div>
                                 <div class="item">
                                     <p>
-                                        Using a watermark on your work is like peeing on your belongings so no one will steal them.
+                                      Caracciolo S., Gelli B., Molinari S., Smecca F.,  “Cosa voglio fare da grande, adesso che sono grande? Counseling di orientamento scolastico e scelta accademica”. All’interno del volume “Sopravvivere all’università…”. Ed. Gruppo Tipografico Editoriale s.r.l. L’Aquila, a cura di Massimo Casacchia, Patricia Giosuè, Rita Roncone, pubblicato nel 2005.
                                     </p>
-                                    <h6>THOMAS AMADOR, <span> Awwwards.com</span></h6>
+                                    <h6>“Cosa voglio fare da grande, adesso che sono grande?</h6>
                                 </div>
+                               <div class="item active">
+                                        <p>
+                                          All’interno del volume “Lutto e separazione” a cura di M. Baldassarre, L. Cianciusi, P. Petrini (Ed. Alpes, 2009) sono coautrice del capitolo “Lutto e separazione: la chiusura del processo terapeutico”.
+                                        </p>
+                                        <h6>“Lutto e separazione” a cura di M. Baldassarre, L. Cianciusi, P. Petrini</h6>
+                              </div>
                             </div>
 
                         </div>
@@ -928,7 +935,7 @@
             </div>
         </section>
 
-        <section id="blog" class="resume">
+        <!--<section id="blog" class="resume">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
@@ -987,9 +994,9 @@
                 </div>
 
             </div>
-        </section>
+        </section>-->
 
-        <section id="client-divider">
+        <!--<section id="client-divider">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
@@ -1021,7 +1028,7 @@
 
                 </div>
             </div>
-        </section>
+        </section>-->
 
 
         <section id="contact">
@@ -1051,7 +1058,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <h6>(+39) 3471628677</h6>
+                                <a href="tel: 3471628677"><h6>(+39) 3471628677</h6></a>
                             </div>
 
                             <div class="col-md-4 col-sm-4 service ">
@@ -1063,7 +1070,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <h6>gelli.barbara@libero.it</h6>
+                                    <a href="mailto: gelli.barbara@libero.it"><h6>gelli.barbara@libero.it</h6></a>
                                 </a>
                             </div>
 
@@ -1086,7 +1093,7 @@
 
                     <div class="row">
                         <div class="col-md-12  text-center">
-                            <div id="copy-text">&copy; Gelli Barbara | Psicologa <i class="icon-heart"></i> by Maskyn</div>
+                            <div id="copy-text">&copy; Gelli Barbara<i class="icon-heart"></i> by Maskyn</div>
                         </div>
                     </div>
                 </div>
