--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css' />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,700" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600" rel="stylesheet">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image">
+
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
@@ -79,17 +81,15 @@
                 </div>
                 <div class="col-md-6">
                     <div class="home-shrink text-center pad-large">
+                        <img src="img/Gelli_Barbara_logo_200px_white.png" width="100px" height="100px" alt="Gelli Barbara logo">
                         <h1 class="display-h text-white">Gelli Barbara</h1>
                         <div class="hr dark"></div>
                         <h2 class="roles text-white">Psicologa psicoterapeuta ad indirizzo psicodinamico</h2>
-                        <br>
                         <h2 class="roles text-white">Iscrizione albo REG n° 1584</h2>
                         </br>
                         </br>
                         </br>
-                        </br>
-                        </br>
-                        </br>
+
                         <a class="scroll" href="#about"><h6 class="text-white icon-angle-circled-down">Scorri in basso</h6></a>
                     </div>
                 </div>
