--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="row">
                     <div class="col-md-4 ">
                         <div id="logo">
-                            <a href="index.html"><h1>Gelli Barbara</h1></a>
+                            <a href="index.html"><img src="img/Gelli_Barbara_logo_200px.png" width="50px" height="50px" alt="Gelli Barbara logo"></a>
                         </div>
                     </div>
 
