Services bug fixed

--- a/index.html
+++ b/index.html
@@ -170,10 +170,29 @@
                         </p>
                     </div>
 
-                    <br>
+                    <div class="row">
+                      <div class="col-md-12">
+                        <img class="img-responsive" src="img/index.png" alt="office">
+                      </div>
+                    </div>
 
 
-                    <div class="row service-row">
+
+                    <div class="row">
+
+                      <div class="col-md-4  service wow fadeInUp" data-wow-delay="1s">
+                          <div class="service-diamond-holder">
+                              <div class="service-diamond">
+                                  <div class="diamond-border">
+                                      <i class="icon-doc-text"></i>
+                                  </div>
+                              </div>
+                          </div>
+                          <h5>Psicoterapia didattica</h5>
+                          <p>
+                            Trattamento psicoterapeutico a cui si sottopongono coloro che vogliono svolgere la professione di psicoterapeuta (Galimberti, 1992). Per accedere a questo tipo di psicoterapia, è necessario aver conseguito la laurea quinquennale in psicologia (o in medicina) ed aver intrapreso un percorso di specializzazione quadriennale.
+                          </p>
+                      </div>
 
                         <div class="col-md-4  service wow fadeInLeft" data-wow-delay="1s">
                             <div class="service-diamond-holder">
@@ -189,19 +208,7 @@
                             </p>
                         </div>
 
-                        <div class="col-md-4  service wow fadeInUp" data-wow-delay="1s">
-                            <div class="service-diamond-holder">
-                                <div class="service-diamond">
-                                    <div class="diamond-border">
-                                        <i class="icon-doc-text"></i>
-                                    </div>
-                                </div>
-                            </div>
-                            <h5>Psicoterapia didattica</h5>
-                            <p>
-                              Trattamento psicoterapeutico a cui si sottopongono coloro che vogliono svolgere la professione di psicoterapeuta (Galimberti, 1992). Per accedere a questo tipo di psicoterapia, è necessario aver conseguito la laurea quinquennale in psicologia (o in medicina) ed aver intrapreso un percorso di specializzazione quadriennale.
-                            </p>
-                        </div>
+
 
 
                         <div class="col-md-4  service wow fadeInRight" data-wow-delay="1s">
@@ -220,10 +227,6 @@
                       </div>
                     </div>
                   </div>
-
-                </div>
-
-                <div>
         </section>
 
 
@@ -787,11 +790,11 @@
                             <div class="carousel-inner" role="listbox">
                                 <div class="item active">
                                     <div class="col-md-4 col-sm-12 col-xs-12">
-                                        <h3 class="text-white period">2007 - Present</h3>
-                                        <h4 class="text-white organisation">Professoressa ed educatrice</h4>
+                                        <h3 class="text-white period">Dal 2007</h3>
+                                        <h4 class="text-white organisation">Università di Ferrara</h4>
                                     </div>
                                     <div class="col-md-8 experience" data-wow-delay="1s">
-                                        <h4>Senior Front-end Developer</h4>
+                                        <h4>Professoressa</h4>
                                         <p>
                                           Professoressa a contratto  in qualità di cultore della materia per il corso “Psicologia del tempo libero e dello sport”, laurea in Scienze Motorie, facoltà di Medicina e Chirurgia. Operatore di Strada dell’Unità Mobile, in collaborazione con il Ser.T. di Ferrara, per un progetto di riduzione del danno e del contenimento del disagio. Educatore su disabili mentali presso il Comune di Ferrara (in collaborazione con A.C.L.I.), in un progetto di inserimento lavorativo.
                                         </p>
