--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
                 </div>
                 <!-- end project-->
 
-                <div id="project-3" class="project">
+                <!--<div id="project-3" class="project">
                     <div class="project-wrapper">
                         <div class="row">
                             <div class="col-md-8 col-md-offset-2 project-details">
@@ -547,7 +547,7 @@
                 <!-- end project-->
 
 
-                <div id="project-4" class="project">
+                <!--<div id="project-4" class="project">
                     <div class="project-wrapper">
                         <div class="row">
                             <div class="col-md-8 col-md-offset-2 project-details">
@@ -589,7 +589,7 @@
                 <!-- end project-->
 
 
-                <div id="project-5" class="project">
+                <!--<div id="project-5" class="project">
                     <div class="project-wrapper">
                         <div class="row">
                             <div class="col-md-8 col-md-offset-2 project-details">
@@ -639,7 +639,7 @@
                 <!-- end project-->
 
 
-                <div id="project-6" class="project">
+                <!--<div id="project-6" class="project">
                     <div class="project-wrapper">
                         <div class="row">
                             <div class="col-md-8 col-md-offset-2 project-details">
@@ -677,7 +677,7 @@
                 <!-- end project-->
 
 
-                <div id="project-7" class="project">
+                <!--<div id="project-7" class="project">
                     <div class="project-wrapper">
                         <div class="row">
                             <div class="col-md-8 col-md-offset-2 project-details">
@@ -720,7 +720,7 @@
                 <!-- end project-->
 
 
-                <div id="project-8" class="project">
+                <!--<div id="project-8" class="project">
                     <div class="project-wrapper">
                         <div class="row">
                             <div class="col-md-8 col-md-offset-2  project-details">
