Final update, the site is ready

--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
 
         <section id="home" class="wow fadeInUp" data-wow-duration="2s">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-12 col-sm-12 col-xm-12">
                     <img style="width: 100%" class="studio-pic" src="Immagini_studio/studio_colorato_1.jpg" alt="foto dello studio">
                     <div class="overlay col-md-6 col-sm-12 pad-large text-center">
                         <img class="logo_barbara" src="img/Gelli_Barbara_logo_200px_white.png" width="100px" height="100px" alt="Gelli Barbara logo">
-                        <h1 class="display-h text-white">Gelli Barbara</h1>
+                        <h1 class="display-h text-white gelli_barbara">Gelli Barbara</h1>
                         <div class="hr dark"></div>
-                        <h2 class="roles text-white">Psicologa psicoterapeuta ad indirizzo psicodinamico</h2>
-                        <h2 class="roles text-white">Iscrizione albo REG n° 1584</h2>
+                        <h3 class="roles text-white psicologa">Psicologa psicoterapeuta ad indirizzo psicodinamico</h3>
+                        <h3 class="roles text-white albo_REG">Iscrizione albo REG n° 1584</h3>
                         </br>
                         </br>
                         </br>
