--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
     <link rel="stylesheet" href="css/flexslider.css" />
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/fontello/css/fontello.css" />
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-91484680-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
 </head>
 
@@ -94,7 +104,7 @@
                             La psicoanalisi è un'opportunità...<br>un'opportunità di ripartire</br>
                             <em>Jacques Lacan</em>
                         </p>
-                        <a href="#contact" target="_blank" class="btn btn-inverse wow fadeInUp scroll" data-wow-delay="1s"><i class="icon-right-hand"></i><h6>Contattami</h6></a>
+                        <a href="#contact" target="_blank" class="btn btn-inverse wow fadeInUp scroll" data-wow-delay="0.5s"><i class="icon-right-hand"></i><h6>Contattami</h6></a>
                     </div>
                 </div>
             </div>
@@ -113,7 +123,7 @@
                 </div>
 
                 <div class="row service-row">
-                    <div class="col-md-4  service wow fadeInLeft" data-wow-delay="1s">
+                    <div class="col-md-4  service wow fadeInLeft" data-wow-delay="0.6s">
                         <div class="service-diamond-holder">
                             <div class="service-diamond">
                                 <div class="diamond-border">
@@ -127,7 +137,7 @@
                         </p>
                     </div>
 
-                    <div class="col-md-4  service wow fadeInUp" data-wow-delay="1s">
+                    <div class="col-md-4  service wow fadeInUp" data-wow-delay="0.6s">
                         <div class="service-diamond-holder">
                             <div class="service-diamond">
                                 <div class="diamond-border">
@@ -141,7 +151,7 @@
                         </p>
                     </div>
 
-                    <div class="col-md-4  service wow fadeInRight" data-wow-delay="1s">
+                    <div class="col-md-4  service wow fadeInRight" data-wow-delay="0.6s">
                         <div class="service-diamond-holder">
                             <div class="service-diamond">
                                 <div class="diamond-border">
@@ -162,7 +172,7 @@
                     </div>
 
                     <div class="row">
-                      <div class="col-md-4  service wow fadeInUp" data-wow-delay="1s">
+                      <div class="col-md-4  service wow fadeInUp" data-wow-delay="0.6s">
                           <div class="service-diamond-holder">
                               <div class="service-diamond">
                                   <div class="diamond-border">
@@ -176,7 +186,7 @@
                           </p>
                       </div>
 
-                        <div class="col-md-4  service wow fadeInLeft" data-wow-delay="1s">
+                        <div class="col-md-4  service wow fadeInLeft" data-wow-delay="0.6s">
                             <div class="service-diamond-holder">
                                 <div class="service-diamond">
                                     <div class="diamond-border">
@@ -190,7 +200,7 @@
                             </p>
                         </div>
 
-                        <div class="col-md-4  service wow fadeInRight" data-wow-delay="1s">
+                        <div class="col-md-4  service wow fadeInRight" data-wow-delay="0.6s">
                             <div class="service-diamond-holder">
                                 <div class="service-diamond">
                                     <div class="diamond-border">
@@ -221,9 +231,9 @@
                 </div>
 
                 <div class="col-md-6">
-                    <div class="col-md-6 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-delay="1s">
+                    <div class="col-md-6 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-delay="0.8s">
                     </div>
-                    <div class="col-md-8 experience wow fadeInRight" data-wow-delay="1s">
+                    <div class="col-md-8 experience wow fadeInRight" data-wow-delay="0.8s">
                         <h4>Disturbi trattati</h4>
                         <ul>
                           <li>depressione e disturbi dell'umore</li>
@@ -234,16 +244,16 @@
                           <li>disturbi del controllo degli impulsi</li>
                           <li>disturbi di personalità</li>
                           <li>problemi relazionali e di coppia</li>
-                          <li>problemi del ciclo di vita (separazioni, lutti, crisi)</li>
+                          <li>problemi del ciclo di vita</li>
                           <li>educazione dei figli</li>
                         </ul>
                     </div>
                 </div>
 
                 <div class="col-md-6">
-                    <div class="col-md-6 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-delay="1s">
+                    <div class="col-md-6 col-sm-12 col-xs-12 wow fadeInLeft" data-wow-delay="0.8s">
                     </div>
-                    <div class="col-md-8 experience wow fadeInRight" data-wow-delay="1s">
+                    <div class="col-md-8 experience wow fadeInRight" data-wow-delay="0.8s">
                         <h4>E inoltre di</h4>
                         <ul>
                           <li>autostima</li>
@@ -288,7 +298,7 @@
                             <div class="carousel-inner" role="listbox">
                                 <div class="item active">
 
-                                    <div class="col-md-8 experience" data-wow-delay="1s">
+                                    <div class="col-md-8 experience" data-wow-delay="0.7s">
                                         <ul>
                                           <li>Dal 2007 lavoro come <strong>psicoterapeuta</strong> in libera professione.</li>
                                           <li>Dal 2012 ad oggi <strong>counselor</strong> per il servizio Sostegno Psicologico agli studenti, presso l’Università di Ferrara.</li>
