--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
         <script src="js/typed.js"></script>
         <script src="js/wow.min.js"></script>
         <!-- Google Maps JS File -->
-        <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBKwMLi9pyEle6_I4wLrA5Z-v3GG1yrpfc&callback=initMap"></script>
         <script src="js/main.js"></script>
 
 </body>
